cache-control/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  safe_regex:
                    google_re2: {}
                    regex: "/.*/menu/.*|.*/lane/.*"
                route:
                  cluster: msa                 
              - match:
                  safe_regex:
                    google_re2: {}
                    regex: "/.*/metadata/.*|.*/config/.*|.*/properties/.*"
                route:
                  cluster: msb
          http_filters:
          - name: envoy.filters.http.compressor
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
              response_direction_config:
                common_config:
                  min_content_length: 100
                  content_type:
                    - text/html
                    - application/json
              compressor_library:
                name: text_optimized
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                  memory_level: 3
                  window_bits: 10
                  compression_level: BEST_COMPRESSION
                  compression_strategy: DEFAULT_STRATEGY          
          - name: envoy.filters.http.lua
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
              inline_code: |
                
                function envoy_on_request(request_handle)
                    local metadata = request_handle:streamInfo():dynamicMetadata()
                    metadata:set("envoy.filters.http.lua", "requestInfo", {
                        path = request_handle:headers():get(":path"),
                        method = request_handle:headers():get(":method")
                      })
                end
                function envoy_on_response(response_handle)
                    local requestInfoObj = response_handle:streamInfo():dynamicMetadata():get("envoy.filters.http.lua")["requestInfo"]
                    local path = requestInfoObj.path
                    local method = requestInfoObj.method
                    local status_code = response_handle:headers():get(":status")
                    if (method == 'GET') and (status_code == '200') then
                      if string.match(path, "/.*/menu/.*") then
                        response_handle:headers():add("Cache-Control", "public, max-age=1800")
                      elseif string.match(path, "/.*/metadata/.*") then
                        response_handle:headers():add("Cache-Control", "public, max-age=600")  
                      elseif string.match(path, "/.*/config/.*") then
                        response_handle:headers():add("Cache-Control", "public, max-age=900")     
                      elseif string.match(path, "/.*/lane/items/.*") then
                        response_handle:headers():add("Cache-Control", "public, max-age=3600")                                               
                      end
                    end
                end      
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: msa
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: msa
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: msa
                  port_value: 3000
    - name: msb
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: msb
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: msb
                  port_value: 3000
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
